--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="intro">
             <img class="airplane" src="./images/airplane.png" alt="airplane image">
             <div class="container position-relative">
-                <div class="col-md-5">
+                <div class="col-md-7 col-lg-6">
                     <img class="object-fit-contain" width="187" height="140" src="./images/logo.png" alt="logo image">
                     <h1 class="text-uppercase mb-0">infinity tech</h1>
                     <p class="mb-2">
@@ -913,8 +913,63 @@
     <!-- End Main -->
     <!-- Start Footer -->
     <footer>
+        <button class="go-to--top d-flex justify-content-center">
+            <i class="bi bi-chevron-up"></i>
+        </button>
         <div class="container">
-
+            <div class="row gy-4">
+                <div class="col-md-6 col-lg-4">
+                    <img class="d-block mx-auto" width="76" height="60" src="./images/logo-white.png" alt="logo image">
+                    <h6 class="h2 mb-0 mt-2 text-uppercase">infinity tech</h6>
+                    <p>
+                        Infinity Tech is the largest health tourism platform in the Middle East, hosting the highest
+                        quality medical and tourism services.
+                    </p>
+                    <div class="d-flex">
+                        <div class="symbol">
+                            <img width="40" height="40" src="./images/iso-9001.png" alt="iso 9001">
+                        </div>
+                        <div class="symbol">
+                            <img width="40" height="40" src="./images/iso-27001.png" alt="iso 27001">
+                        </div>
+                        <div class="symbol">
+                            <img width="40" height="40" src="./images/tuv.png" alt="tuv">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-2">
+                    <h5 class="text-white text-capitalize fw-bold mb-3">Category</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="#">Hospital</a></li>
+                        <li class="nav-item mb-2"><a href="#">Clinics</a></li>
+                        <li class="nav-item mb-2"><a href="#">Pharmacy</a></li>
+                        <li class="nav-item mb-2"><a href="#">Thermal Center</a></li>
+                        <li class="nav-item mb-2"><a href="#">Medical SPA</a></li>
+                        <li class="nav-item mb-2"><a href="#">Concierge</a></li>
+                        <li class="nav-item mb-2"><a href="#">Doctor</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6 col-lg-2">
+                    <h5 class="text-white text-capitalize fw-bold mb-3">Support</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="#">Advertising</a></li>
+                        <li class="nav-item mb-2"><a href="#">Chat</a></li>
+                        <li class="nav-item mb-2"><a href="#">Tutorials</a></li>
+                        <li class="nav-item mb-2"><a href="#">Terms and conditions</a></li>
+                        <li class="nav-item mb-2"><a href="#">GDPR</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <h5 class="text-white text-capitalize fw-bold mb-3">Contact us</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2">Grivitei, nr 36, Cam 21 Oradea</li>
+                        <li class="nav-item mb-2">+40 733 545 766</li>
+                        <li class="nav-item mb-2">+39 346 490 4660</li>
+                        <li class="nav-item mb-2">info@bookingsmed.eu</li>
+                        <li class="nav-item mb-2">tech@bookingsmed.eu</li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div class="copyright py-3">
             <section class="container">
