update html file

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-lg-center">
                         <li class="nav-item mx-2">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
@@ -500,7 +500,7 @@
                 <div class="col-lg-5 order-1 order-lg-0">
                     <div class="background-style mb-5">
                         <div class="ratio ratio-1x1">
-                            <img class="img-fluid object-fit-cover" src="./images/services-avatar.png" alt="">
+                            <img class="img-fluid" src="./images/services-avatar.png" alt="">
                         </div>
                     </div>
                     <h5 class="mb-3">
@@ -920,7 +920,7 @@
             <div class="row gy-4">
                 <div class="col-md-6 col-lg-4">
                     <img class="d-block mx-auto" width="76" height="60" src="./images/logo-white.png" alt="logo image">
-                    <h6 class="h2 mb-0 mt-2 text-uppercase">infinity tech</h6>
+                    <h6 class="h2 mb-0 mt-2 text-uppercase text-center">infinity tech</h6>
                     <p>
                         Infinity Tech is the largest health tourism platform in the Middle East, hosting the highest
                         quality medical and tourism services.
