--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
         <div class="intro">
             <img class="airplane" src="./images/airplane.png" alt="airplane image">
             <div class="container position-relative">
-                <div class="col-md-7 col-lg-6">
-                    <img class="object-fit-contain" width="187" height="140" src="./images/logo.png" alt="logo image">
-                    <h1 class="text-uppercase mb-0">infinity tech</h1>
+                <div class="col-8 col-lg-5">
+                    <img class="object-fit-contain d-block mx-auto" width="187" height="140" src="./images/logo.png"
+                        alt="logo image">
+                    <h1 class="text-center text-uppercase mb-0">infinity tech</h1>
                     <p class="mb-2">
                         Infinity Tech is the largest health tourism platform in the Middle East, hosting the highest
                         quality medical and tourism services.
@@ -919,7 +920,7 @@
         <div class="container">
             <div class="row gy-4">
                 <div class="col-md-6 col-lg-4">
-                    <img class="d-block mx-auto" width="76" height="60" src="./images/logo-white.png" alt="logo image">
+                    <img class="d-block mx-auto" width="76" height="60" src="./images/logo-white.svg" alt="logo image">
                     <h6 class="h2 mb-0 mt-2 text-uppercase text-center">infinity tech</h6>
                     <p>
                         Infinity Tech is the largest health tourism platform in the Middle East, hosting the highest
