update intro grid

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="intro">
             <img class="airplane" src="./images/airplane.png" alt="airplane image">
             <div class="container position-relative">
-                <div class="col-8 col-lg-5">
+                <div class="col-md-8 col-lg-5">
                     <img class="object-fit-contain d-block mx-auto" width="187" height="140" src="./images/logo.png"
                         alt="logo image">
                     <h1 class="text-center text-uppercase mb-0">infinity tech</h1>
