--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
             <img class="airplane" src="./images/airplane.png" alt="airplane image">
             <div class="container position-relative">
                 <div class="col-md-8 col-lg-5">
-                    <img class="object-fit-contain d-block mx-auto" width="187" height="140" src="./images/logo.png"
-                        alt="logo image">
-                    <h1 class="text-center text-uppercase mb-0">infinity tech</h1>
-                    <p class="mb-2">
+                    <img class="object-fit-contain d-block mx-auto mx-lg-0" width="187" height="140"
+                        src="./images/logo.png" alt="logo image">
+                    <h1 class="text-center text-lg-start text-uppercase mb-0">infinity tech</h1>
+                    <p class="mb-2 text-center text-lg-start">
                         Infinity Tech is the largest health tourism platform in the Middle East, hosting the highest
                         quality medical and tourism services.
                     </p>
